

/*
    This is a proto file .

    Protocol Buffer is open source and free software. Protocol Buffer serialize data structure. 
    This structure used during communication over network. 

    https://developers.google.com/protocol-buffers/docs/proto3

    Version = 3

    Licence = BSD

    Anybody use our source code under Mozilla license. 

    https://github.com/ali2210/WizDwarf/blob/master/LICENSE

*/


syntax = "proto3";

package protos;




option go_package = "github.com/ali2210/wizdwarf/other/fauna/store";



// Digital Signature store Content Ownership
message Digital_Signature{
 
    string Public_Address = 1;
    string Private_Address = 2;
}

// User will change their profile picture as many times. 
message Multi_D_Signature{

    repeated Digital_Signature List = 1; 
}

message Error{
   string Description = 1; 
   enum Err_Status {
       OK = 0;
       ERROR = 1;
   }

   Err_Status State = 2;
}

message Ledger{
    string Name = 1;
}

message Endpoint_Info {
    string Address = 1;
    string API_Key = 2;
}


// Digital Signature Services provide different methods to complete the process
service Digital_Signature_Service {
    
    rpc ConnectFaunaLedger(Endpoint_Info) returns (Error);
}